Update Fail Message

--- a/index.html
+++ b/index.html
@@ -525,7 +525,8 @@
             
             
              <div class="lienheinfo wow fadeIn" style="text-align: center">
-                <div class="title30" style="text-align: center">Trang này xấu quá nên mình xóa luôn roài :")))</div>
+                <div class="title30" style="text-align: center;margin-bottom: 12px;">Trang này fail quá nên mình xóa luôn roài :")))</div>
+                 <div class="bodytext24" style="text-align: center">Cảm ơn bạn đã ghé qua!</div>
                  <div class="bodytext24" style="text-align: center">Ảnh: Adobe Stock. <a href="https://www.youtube.com/watch?v=AlYsbrcgKL8" style="text-decoration: none; cursor: pointer" class="bodytext24">Video: DTS Frames</a>
 </div>
              </div>
